--- a/Consulta_Brasil/2/index.html
+++ b/Consulta_Brasil/2/index.html
@@ -51,7 +51,7 @@
     }
   </style>
   <script>
-    var urlBackRedirect = 'https://consultaabr.shop/Consulta_Brasil/3/'; // lembre-se de usar a url sem espaços
+    var urlBackRedirect = 'https://eduartomoretto.github.io/consultaabr.shop/Consulta_Brasil/3/'; // lembre-se de usar a url sem espaços
     // não altere nada abaixo dessa linha
     urlBackRedirect = urlBackRedirect = urlBackRedirect.trim() +
       (urlBackRedirect.indexOf("?") > 0 ? '&' : '?') +
